# FullStack-AI-23

./: .gitignore
code-environments/myapp/: app.py  pyproject.toml
design-patterns/: design_patterns.ipynb
mlflow-demo/: .gitignore  intro.ipynb  mlflow-server.sh  modules.ipynb  output.txt  run.sh  shell.sh
mlflow-iris/: Dockerfile  MLproject  client.py  driver.py  main.py  pyproject.toml  python_env.yaml  serve  test_api.http
my-first-project/: docker-compose.yml
my-first-project/backend/: .dockerignore  Dockerfile  api.py  cmd  iris_controller.py  main.py  model_loader.py  pyproject.toml  requirements.txt  run.sh  train.ipynb  users_controller.py
my-first-project/backend/models/sklearn/: iris_model.pk
my-first-project/backend/models/tf/iris_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
my-first-project/backend/models/tf/iris_model/variables/: variables.data-00000-of-00001  variables.index
my-first-project/frontend/: Dockerfile  home.py  pyproject.toml  run.sh
my-first-project/frontend/pages/: aboutme.py
